syntax = "proto3";

package rivet.backend.pkg.cluster.msg.datacenter_create;

import "proto/common.proto";
import "proto/backend/cluster.proto";

/// name = "msg-cluster-datacenter-create"
/// parameters = [
/// 	{ name = "datacenter_id" },
/// ]
message Message {
    rivet.common.Uuid datacenter_id = 1;
    rivet.common.Uuid cluster_id = 2;
    string name_id = 3;
    string display_name = 4;

    rivet.backend.cluster.Provider provider = 5;
    string provider_datacenter_id = 6;
    optional string provider_api_token = 7;

    repeated rivet.backend.cluster.Pool pools = 8;
    rivet.backend.cluster.BuildDeliveryMethod build_delivery_method = 9;
}

// Helper proto for writing to sql
message Pools {
    repeated rivet.backend.cluster.Pool pools = 1;
}
